@@ -17,10 +17,14 @@
 			<table class="toolbar" border="0" cellpadding="0" cellspacing="0">
 				<tr>
 					<td class="icon" nowrap>
+					  <img src="chrome://firephp/skin/spacer.gif" border="0" width="18" height="1">
 					</td>
-					<td class="title">
+					<td class="title" nowrap width="100%">
 						Variable Viewer
 					</td>
+          <td class="sizing" nowrap>
+            <a href="#" onClick="top.FirePHP.sizeVariableInspectorOverlayWidthTo('50%');">50%</a> | <a href="#" onClick="top.FirePHP.sizeVariableInspectorOverlayWidthTo('70%');">70%</a> | <a href="#" onClick="top.FirePHP.sizeVariableInspectorOverlayWidthTo('90%');">90%</a>
+          </td>
 					<td class="close" nowrap>
 						<a id="closelink" href="#" onClick="top.FirePHP.hideVariableInspectorOverlay(true);">Close</a> 
 					</td>
